# efficiently_computing_extremal_points_in_cylindrical_coordinates

./: CMakeLists.txt  README.md  compare.cpp  graham_scan.cpp  kd_wrap_demo.cpp  main.cpp  octree_gift_wrapping.cpp  octree_scan.cpp  optimized_graham_scan.cpp  quadtree_scan.cpp  quickhull.cpp
Google_tests/: CMakeLists.txt  kd_wrap_test.cpp  octreeWrap_test.cpp  octree_helper_test.cpp  octree_wrap_test.cpp  tree_helper_test.cpp
deprecated/: CMakeLists.txt  graham_scan.cpp  octree_scan.cpp  optimized_graham_scan.cpp  quadtree_scan.cpp
deprecated/include/: config.h  input_generators.h  matplot_helper.h  tree_scan_helper.h
deprecated/src/: input_generators.cpp  tree_scan_helper.cpp
docs/: index.html
include/: CGALSetup.h  ExecutionWrapper.h  config.h  gift_wrapping.h  input_generators.h  kd_wrap.h  matplot_helper.h  modifiedGrahamScan.h  octreeWrap.h  octree_scan_helper.h  octree_wrap.h  optimizedGrahamScan.h  tree_scan_helper.h
src/: ExecutionWrapper.cpp  gift_wrapping.cpp  input_generators.cpp  kd_wrap.cpp  modifiedGrahamScan.cpp  octreeWrap.cpp  octree_scan_helper.cpp  octree_wrap.cpp  optimizedGrahamScan.cpp  tree_scan_helper.cpp
